<resources>
    <string name="app_name">Desa Bangkit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">Lewati</string>
    <string name="onboarding_title_1">Pangan Segar</string>
    <string name="onboarding_subtitle_1">Pangan segar yang berkualitas tinggi, tetap aman, higienis, dan bermutu</string>
    <string name="onboarding_title_2">Pengiriman</string>
    <string name="onboarding_subtitle_2">Disortir terlebih dahulu sebelum dikemas dan dikirim, agar tetap awet sampai tujuan</string>
    <string name="onboarding_title_3">Mutu Pangan</string>
    <string name="onboarding_subtitle_3">Proses budidaya pangan telah diuji sesuai dengan standar sehingga aman untuk dikonsumsi</string>
    <string name="next">Lanjut</string>
    <string name="end_title">Selesai</string>
    <string name="email">Email</string>
    <string name="password">Kata Sandi</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="signin">Masuk</string>
    <string name="dont_have_account">Belum memiliki akun ? Daftar</string>
    <string name="have_account">Sudah memiliki akun ? Silahkan Login</string>
    <string name="roles">Partner</string>
    <string name="signup">Daftar</string>
    <string name="subtitle_success_register">Selamat anda berhasil terdaftar, silahkan login</string>
    <string name="sucess_register_title">Proses Selesai</string>
    <string name="go_to_login_page">Pergi ke halaman login</string>
    <string name="home">Beranda</string>
    <string name="pasok_produk">Pasok Produk</string>
    <string name="transaction">Transaksi</string>
    <string name="account">Akun</string>
    <string name="subtitle_check_verification">Anda belum melakukan verifikasi, silahkan cek email</string>
    <string name="go_to_email_app">Pergi ke aplikasi Email</string>
    <string name="resend_verification_txt">Tidak mendapatkan email verifikasi</string>
    <string name="error_email_text_empty">Silahkan masukkan email Anda terlebih dahulu.</string>
    <string name="error_email_text_not_matches">Email Anda tidak valid.</string>
    <string name="error_name_text_empty">Silahkan masukkan nama Anda terlebih dahulu.</string>
    <string name="error_password_text_empty">Silahkan masukkan password Anda terlebih dahulu.</string>
    <string name="error_password_text_length">Password harus lebih dari 6 Huruf.</string>
    <string name="logout_text">Logout</string>
    <string name="welcome_text">Hi,</string>
    <string name="new_product">Product Terbaru</string>
    <string name="show_all">Tampilkan Semua</string>
    <string name="productname">ProductName</string>
    <string name="product_category">Kategori Produk</string>
    <string name="product_price">Product Price/KG</string>
    <string name="list_categori">Daftar Kategori</string>
    <string name="category">Kategori:</string>
    <string name="pre_order_now">Pre Order Sekarang!</string>
    <string name="take_photo">Ambil Photo</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="upload_data">Upload Data</string>
    <string name="product_name">Nama Produk</string>
    <string name="category_product">Category Product</string>
    <string name="quantity">Quantity/Kg</string>
    <string name="price">Harga Ekspetasi</string>
    <string name="koperasi_delivery">Diantar Koperasi</string>
    <string name="address">Alamat</string>
    <string name="user_id">User Id</string>
    <string name="id_koperasi">Id Koperasi</string>
    <string name="product_input">Input Produk</string>
    <string name="product_save">Product Tersimpan</string>
    <string name="open_email">Buka Email</string>
    <string name="delivery_option">Opsi Pengambilan</string>
    <string name="failed_photo">Gagal Mendapatkan Photo</string>
    <string name="camera_not_have_access">Camera Tidak Dapat Diakses</string>
    <string name="cooperation_name">Nama Koperasi</string>
    <string name="product_image">Gambar Produk</string>
    <string name="total_price">Total Harga</string>
    <string name="submit">Submit</string>
    <string name="address_placeholder">"%1$s, %2$s, %3$s, %4$s", %5$s"</string>
    <string name="currency_placeholder">Rp. %1$s/KG</string>
    <string name="currency_placeholder_2">Rp. %1$s</string>
    <string name="currency_placeholder_3">Harga Expetasi Tertinggi: Rp. %1$s/Kg</string>
    <string name="success_input_product_text">Berhasil Input Product!</string>
    <string name="success_input_product_desc">Selamat! Anda telah berhasil input product ke database, admin akan melakukan pengecekan silahkan menunggu</string>
    <string name="go_to_input_product_again">Input Product Lagi</string>
    <string name="go_to_home">Kembali ke halaman Home</string>
    <string name="text_title_delivery_option">List Koperasi Terdaftar</string>
    <string name="text_title_delivery_option_2">Masukkan Alamat Anda</string>
    <string name="village">Desa</string>
    <string name="district">Kecamatan</string>
    <string name="city">Kota/Kabupaten</string>
    <string name="province">Provinsi</string>
    <string name="status_transaksi">Status Transaksi</string>
    <string name="preorder_sticker">PREORDER</string>
    <string name="normal_transaction">NON-PREORDER</string>
    <string name="transaction_approve">Approved</string>
    <string name="transaction_still_proses">Dalam Pengecekan</string>
    <string name="accepted_preorder">Penuhi Pesanan Preorder!</string>
    <string name="all_transaction">Semua Transaksi</string>
    <string name="preorder">Preorder</string>
    <string name="not_preorder">Bukan Preorder</string>
    <string name="created_at">Dibuat pada: %1$s</string>
    <string name="product_name_placeholder">Nama Produk: %1$s</string>
    <string name="product_category_placeholder">Category: %1$s</string>
    <string name="product_quantity_placeholder">Quantity/Kg: %1$s</string>
</resources>