<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".InputProductsFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:boxStrokeColor="@color/fern"
        app:hintTextColor="@color/fern"
        app:boxCornerRadiusTopStart="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        android:hint="@string/product_name"
        android:layout_marginHorizontal="28dp"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_category"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:boxStrokeColor="@color/fern"
        app:hintTextColor="@color/fern"
        app:boxCornerRadiusTopStart="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        android:hint="@string/category_product"
        android:layout_marginHorizontal="28dp"
        app:layout_constraintTop_toBottomOf="@+id/til_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_category"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_quantity"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:boxStrokeColor="@color/fern"
        app:hintTextColor="@color/fern"
        app:boxCornerRadiusTopStart="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        android:hint="@string/quantity"
        android:layout_marginHorizontal="28dp"
        app:layout_constraintTop_toBottomOf="@+id/til_category">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_quantity"
            android:layout_width="match_parent"
            android:inputType="number"
            android:layout_height="50dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_price_expected"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:boxStrokeColor="@color/fern"
        app:hintTextColor="@color/fern"
        app:boxCornerRadiusTopStart="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        android:hint="@string/price"
        android:layout_marginHorizontal="28dp"
        app:layout_constraintTop_toBottomOf="@+id/til_quantity">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_price_expected"
            android:layout_width="match_parent"
            android:inputType="number"
            android:layout_height="50dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_delivery_option"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:boxStrokeColor="@color/fern"
        app:hintTextColor="@color/fern"
        app:boxCornerRadiusTopStart="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        android:hint="@string/koperasi_delivery"
        android:layout_marginHorizontal="28dp"
        app:layout_constraintTop_toBottomOf="@+id/til_price_expected">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_delivery_option"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_address"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:boxStrokeColor="@color/fern"
        app:hintTextColor="@color/fern"
        app:boxCornerRadiusTopStart="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        android:hint="@string/address"
        android:layout_marginHorizontal="28dp"
        app:layout_constraintTop_toBottomOf="@+id/til_delivery_option">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_address"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

    </com.google.android.material.textfield.TextInputLayout>


    <ImageView
        android:id="@+id/iv_photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:scaleType="fitCenter"
        android:src="@drawable/cabe"
        app:layout_constraintEnd_toStartOf="@+id/btnUploadPhoto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_address" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnTakePhoto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/take_photo"
        app:layout_constraintEnd_toEndOf="@+id/btnUploadPhoto"
        app:layout_constraintStart_toStartOf="@+id/btnUploadPhoto"
        app:layout_constraintTop_toBottomOf="@+id/til_address" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnUploadPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="64dp"
        android:text="@string/upload_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTakePhoto" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnUploadData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="28dp"
        android:backgroundTint="@color/fern"
        android:fontFamily="@font/poppins_medium"
        android:paddingHorizontal="16dp"
        android:paddingVertical="10dp"
        android:text="@string/upload_data"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:cornerRadius="16dp"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUploadPhoto" />

    </androidx.constraintlayout.widget.ConstraintLayout>