<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.pages.products.SuccessInputProductFragment">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/success_input_product_text"
        android:textColor="@color/fern"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lt_image"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:layout_marginTop="32dp"
        app:lottie_rawRes="@raw/success_register" />

    <TextView
        android:id="@+id/tvSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="22dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center"
        android:text="@string/success_input_product_desc"
        android:textColor="@color/fern"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lt_image" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGoToInputProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="28dp"
        android:backgroundTint="@color/fern"
        android:fontFamily="@font/poppins_medium"
        android:paddingHorizontal="16dp"
        android:paddingVertical="10dp"
        android:text="@string/go_to_input_product_again"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:cornerRadius="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/tvSubtitle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGoToHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="28dp"
        android:backgroundTint="@color/fern"
        android:fontFamily="@font/poppins_medium"
        android:paddingHorizontal="16dp"
        android:paddingVertical="10dp"
        android:text="@string/go_to_home"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:cornerRadius="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btnGoToInputProduct" />

</androidx.constraintlayout.widget.ConstraintLayout>