<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.pages.auth.RegisterFragment">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_header_register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lt_image"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivBack"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:layout_marginTop="20dp"
        app:lottie_rawRes="@raw/welcome" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_fullname"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:boxStrokeColor="@color/fern"
        app:hintTextColor="@color/fern"
        app:boxCornerRadiusTopStart="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        android:hint="@string/full_name"
        android:layout_marginHorizontal="28dp"
        app:layout_constraintTop_toBottomOf="@+id/lt_image">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_fullname"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:boxStrokeColor="@color/fern"
        app:hintTextColor="@color/fern"
        app:boxCornerRadiusTopStart="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        android:hint="@string/email"
        android:layout_marginHorizontal="28dp"
        app:layout_constraintTop_toBottomOf="@+id/til_fullname">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="28dp"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        app:boxStrokeColor="@color/fern"
        app:hintTextColor="@color/fern"
        app:boxCornerRadiusTopStart="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/til_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_height="50dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="28dp"
        android:fontFamily="@font/poppins_medium"
        android:backgroundTint="@color/fern"
        android:textSize="16sp"
        android:paddingHorizontal="16dp"
        android:paddingVertical="10dp"
        app:cornerRadius="16dp"
        android:textAllCaps="false"
        android:text="@string/next"
        app:layout_constraintTop_toBottomOf="@+id/til_password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="28dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/poppins_medium"
        android:paddingHorizontal="16dp"
        android:paddingVertical="10dp"
        android:letterSpacing="0"
        android:lineSpacingExtra="0sp"
        android:text="@string/have_account"
        android:textColor="@color/fern"
        android:textSize="16sp"
        android:paddingStart="12dp"
        android:minHeight="0dp"
        android:textAllCaps="false"
        android:paddingEnd="12dp"
        app:cornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister"
        app:strokeColor="@color/fern"
        app:strokeWidth="1dp" />

</androidx.constraintlayout.widget.ConstraintLayout>